--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -1,6 +1,14 @@
 FROM php:5.6-apache
+LABEL maintainer="saintentex@gmail.com"
 
 RUN apt-get update -y && apt-get install -y libpng-dev curl libcurl4-openssl-dev
+RUN apt-get install -y git zip unzip && \
+        php -r "readfile('http://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer && \
+        apt-get -y autoremove && \
+        apt-get clean && \
+        rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+
 RUN pecl install xdebug-2.5.0
 RUN docker-php-ext-install pdo pdo_mysql gd curl mysqli
 RUN docker-php-ext-enable xdebug
@@ -8,5 +16,16 @@ RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/php.ini \
     && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/php.ini
 RUN echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/php.ini
 RUN a2enmod rewrite
+
+
+WORKDIR /var/www/html
+RUN chown -R www-data /var/www
+
+USER www-data
+RUN /usr/bin/composer install
+
+USER root
+COPY phpconfig/php.ini /usr/local/etc/php
+
 
 RUN service apache2 restart
