--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -12,9 +12,10 @@ RUN apt-get install -y git zip unzip && \
 RUN pecl install xdebug-2.5.0
 RUN docker-php-ext-install pdo pdo_mysql gd curl mysqli
 RUN docker-php-ext-enable xdebug
-RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/php.ini \
-    && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/php.ini
-RUN echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/php.ini
+RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    && echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    && echo 'xdebug.remote_host=172.20.0.2' >>  /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN a2enmod rewrite
 
 
