[Update] Dockerfile/gitignore

--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -13,8 +13,8 @@ RUN pecl install xdebug-2.5.0
 RUN docker-php-ext-install pdo pdo_mysql gd curl mysqli
 RUN docker-php-ext-enable xdebug
 RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-    && echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo 'xdebug.remote_host=172.20.0.2' >>  /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN a2enmod rewrite
 
@@ -22,10 +22,10 @@ RUN a2enmod rewrite
 #WORKDIR /var/www/html
 #RUN chown -R www-data /var/www
 
-USER www-data
-COPY composer.json /var/www/html/composer.json
-COPY composer.lock /var/www/html/composer.lock
-RUN /usr/bin/composer install
+#USER www-data
+#COPY composer.json /var/www/html/composer.json
+#COPY composer.lock /var/www/html/composer.lock
+#RUN /usr/bin/composer install
 
 USER root
 COPY phpconfig/php.ini /usr/local/etc/php
