--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:5.6-apache
 LABEL maintainer="saintentex@gmail.com"
 
-RUN apt-get update -y && apt-get install -y \
+RUN apt-get update -y \
+    && apt-get install -y \
     libpng-dev curl \
     libcurl4-openssl-dev \
     libmcrypt-dev \
@@ -22,18 +23,18 @@ RUN pecl install \
 
 RUN docker-php-ext-install pdo pdo_mysql gd curl mysqli mcrypt
 RUN docker-php-ext-enable \
-    xdebug \
-    memcached
+    xdebug memcached
 
 RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo 'xdebug.remote_autostart=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo 'xdebug.remote_connect_back=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && echo 'xdebug.remote_host=172.20.0.2' >>  /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    && echo 'xdebug.remote_host=172.20.0.2' >>  /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo 'xdebug.remote_port=9001' >>  /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN a2enmod rewrite
 
 
-#WORKDIR /var/www/html
-#RUN chown -R www-data /var/www
+WORKDIR /var/www/html
+RUN chown -R www-data /var/www
 
 #USER www-data
 #COPY composer.json /var/www/html/composer.json
